# FoodScraper

./: .gitignore  Cargo.toml  README.MD
.github/: copilot-instructions.md
recipes/: Scampi diabolique met geroosterde krieltjes.json  Scampi met currysaus, broccoli en rijst.json  Tagliatelle met gehaktballen, tomatensaus en Provençaalse groenten.json
src/: main.rs  selectors.toml
src/recipes/: recipe_Geroosterde bloemkool uit de airfryer.json  recipe_Luikse balletjes met frietjes en witloofsalade.json  recipe_Pizza uit de airfryer.json
