[package]
name = "FoodJSON"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.12"
scraper = "0.23.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.4"
toml = "0.8.20"
clap = { version = "4.5.32", features = ["derive"] }
